--- a/qvin_sample_accessioning/web/index.html
+++ b/qvin_sample_accessioning/web/index.html
@@ -38,6 +38,8 @@
   </script>
   <!-- This script adds the flutter initialization JS code -->
   <script src="flutter.js" defer></script>
+  <!-- This script allows web QR code scanning -->
+  <script src="https://cdn.jsdelivr.net/npm/jsqr@1.4.0/dist/jsQR.min.js"></script>
 </head>
 <body>
   <script>
